--- a/styles/background.css
+++ b/styles/background.css
@@ -7,6 +7,14 @@
     margin-top: -60px;
     display: block;
 }
+.background_img_login{
+    height: 100%;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: -200px;
+    display: block;
+}
 * {
     margin: 0;
     padding: 0;
@@ -129,6 +137,115 @@
     bottom: -714px;
     left: 0;
     right: 0;
+    align-items: center;
+    display: inline-block;
+}
+.login_box{
+    display: flex;
+    width: 900px;
+    height: 600px;
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.3);
+    top: 30%;
+    left: 20%;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: gray;
+    border-width: 1px;
+    align-items: center;
+    flex-direction: column;
+
+}
+.login_text{
+    color: white;
+    font-size: 35px;
+    margin-top: 20px;
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.search_box {
+    width: 500px;
+    height: 40px;
+    padding: 10px;
+    margin-top: 40px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.6);
+    outline: none;
+    font-size: 16px;
+    color: #333;
+
+}
+.password_box {
+    width: 500px;
+    height: 40px;
+    padding: 10px;
+    margin-top: 40px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.6);
+    outline: none;
+    font-size: 16px;
+    color: #333;
+
+}
+.acc_create_txt{
+    color: white;
+    margin-top: 40px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    font-weight: bold;
+}
+
+
+.button_group{
+    margin-top:10px;
+    display: flex;
+    gap: 70px;
+
+}
+.create_acc{
+    
+    color: white;
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: rgb(59, 158, 245,0.8);
+    border-radius: 10px;
+    border-style: none;
+    height: 50px;
+    width: 130px;
+}
+.create_acc:hover{
+    background-color: rgb(59, 158, 245,0.6);
+}
+.create_acc:active{
+    background-color: rgb(59, 158, 245);
+}
+.login_acc{
+  
+    color: white;
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: rgb(59, 158, 245,0.8);
+    border-radius: 10px;
+    border-style: none;
+    height: 50px;
+    width: 130px;
+}
+.login_acc:active{
+    background-color: rgb(59, 158, 245);
+}
+.login_acc:hover{
+    background-color: rgb(59, 158, 245,0.6);
+}
+.bottom_info_login{
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.2);
+    display: flex;
+    width: 100%;
+    height: 300px;
+   
+    bottom: -570px;
     align-items: center;
     display: inline-block;
 }
