--- a/styles/background.css
+++ b/styles/background.css
@@ -205,7 +205,11 @@
 
 }
 .create_acc{
-    
+    display: flex; 
+    justify-content: center;  
+    align-items: center;  
+    text-align: center;
+    text-decoration: none;
     color: white;
     font-weight: bold;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -240,7 +244,7 @@
 }
 .bottom_info_login{
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.4);
     display: flex;
     width: 100%;
     height: 300px;
